[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "muforge"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "rich",
    "dynaconf",
    "loguru",
    "aiodns",
    "fastapi[standard]",
    "aioquic",
    "hypercorn[h3]",
    "httpx[http2]",
    "httpx-sse",
    "semver",
]
# This creates the `muforge` command on install
#scripts = { muforge = "muforge" }
